[package]
name = "winapi-easy"
version = "0.2.0-beta.0"
edition = "2021"
authors = ["Rolf Karp <rolf.karp@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "A safe interface to various winapi functionality"
homepage = "https://github.com/rkarp/winapi-easy"
documentation = "https://docs.rs/winapi-easy"
readme = "README.md"
keywords = ["windows", "hotkey", "process", "taskbar"]
categories = ["os::windows-apis", "api-bindings", "gui"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
ntapi = "0.4.1"
num_enum = "0.6.1"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Shutdown",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
more-asserts = "0.3.1"
