[package]
name = "winapi-easy"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
authors = ["Rolf Karp <rolf.karp@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A safe interface to various winapi functionality"
homepage = "https://github.com/rkarp/winapi-easy"
documentation = "https://docs.rs/winapi-easy"
readme = "README.md"
keywords = ["windows", "hotkey", "process", "taskbar"]
categories = ["os::windows-apis", "api-bindings", "gui"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true

[dependencies]
base64 = { version = "0.22.1", optional = true}
ntapi = { version = "0.4.1", optional = true }
num_enum = "0.7.2"
rustversion = "1.0.17"
uuid = { version = "1.9.1", features = ["v4", "fast-rng"], optional = true }

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
more-asserts = "0.3.1"
static_assertions = "1.1.0"

[build-dependencies]
rustversion = "1.0.17"

[features]
default = [
    "clipboard",
    "fs",
    "hooking",
    "input",
    "media",
    "process",
    "shell",
    "ui",
]
clipboard = [
    "windows/Win32_System_DataExchange",
    "windows/Win32_System_Ole",
]
fs = [
    "windows/Win32_Storage_FileSystem",
]
hooking = [
    "input",
    "ui",
    "windows/Win32_UI_Accessibility",
]
input = [
    "windows/Win32_System_Threading",
    "windows/Win32_UI_Input_KeyboardAndMouse",
]
media = [
    "windows/Win32_Devices_FunctionDiscovery",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_Media_Audio",
    "windows/Win32_UI_ColorSystem",
    "windows/Win32_UI_Shell_PropertiesSystem",
    "windows/Win32_System_Com_StructuredStorage",
    "windows/Win32_System_Variant",
]
process = [
    "ntapi",
    "windows/Wdk_System_Threading",
    "windows/Win32_Security",
    "windows/Win32_System_Diagnostics_ToolHelp",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Threading",
]
shell = [
    "ui",
    "windows/Win32_UI_Shell_Common",
]
ui = [
    "base64",
    "uuid",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_System_Console",
    "windows/Win32_System_Shutdown",
    "windows/Win32_UI_HiDpi",
    "windows/Win32_UI_Input_KeyboardAndMouse",
    "windows/Win32_UI_Magnification",
]

[[example]]
name = "flash_window"
required-features = ["ui"]

[[example]]
name = "get_clipboard_file_list"
required-features = ["clipboard"]

[[example]]
name = "get_window_infos"
required-features = ["ui"]

[[example]]
name = "global_hotkeys"
required-features = ["input", "ui"]

[[example]]
name = "input_log"
required-features = ["hooking"]

[[example]]
name = "list_audio_devices"
required-features = ["media"]

[[example]]
name = "magnifier"
required-features = ["hooking", "input", "ui"]

[[example]]
name = "new_window"
required-features = ["ui"]

[[example]]
name = "refresh_icon_cache"
required-features = ["shell"]

[[example]]
name = "set_io_priority"
required-features = ["input", "process", "ui"]

[[example]]
name = "window_event_log"
required-features = ["hooking"]
